# tinyImg

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  RESEARCH_REPORT.md  build.rs  cliff.toml  deny.toml  todos.md
.github/workflows/: ci.yml
assets/fonts/: README
assets/icons/: README
locales/: en.yml  ja.yml  zh-CN.yml  zh-TW.yml
openspec/changes/default-gpu-acceleration/: defect.md  design.md  proposal.md  tasks.md
openspec/changes/default-gpu-acceleration/specs/gpu-acceleration-policy/: spec.md
openspec/changes/default-gpu-acceleration/specs/gpu-status-indicator/: spec.md
shaders/: color_convert.wgsl  resize_bilinear.wgsl
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  preset.rs  storage.rs
src/engine/: mod.rs  params.rs  pipeline.rs  raw_image.rs  registry.rs
src/engine/codec/: avif.rs  gif.rs  jpeg.rs  jxl.rs  mod.rs  png.rs  svg.rs  universal.rs  webp.rs
src/engine/preprocess/: color.rs  metadata.rs  mod.rs  quantize.rs  resize.rs
src/gpu/: color.rs  context.rs  dct.rs  jpeg.rs  mod.rs  resize.rs
src/i18n/: mod.rs
src/worker/: mod.rs  progress.rs  task.rs
tests/: bench_compress.rs  bench_gpu_vs_cpu.rs  codec_tests.rs  encoder_tests.rs  gpu_init_test.rs  gpu_jpeg_test.rs  gpu_tests.rs  pipeline_tests.rs
tests/fixtures/: README
ui/: app.slint
ui/globals/: bridge.slint  state.slint
ui/pages/: about.slint  compress.slint  main.slint  settings.slint
ui/theme/: palette.slint  typography.slint
ui/widgets/: before_after.slint  controls.slint  drop_zone.slint  image_card.slint  image_row.slint  preview_dialog.slint  progress_bar.slint
